--- a/winter_green_salad.html
+++ b/winter_green_salad.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Winter Green Salad Recipe</h1>
-    <img href="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1009379.jpg&q=85">
+    <img src="img/image.jpg" height="400px" width="auto">
 </body>
 
 </html>
