edited winter_green_salad css and html

--- a/winter_green_salad.html
+++ b/winter_green_salad.html
@@ -6,13 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Winter Green Salad Recipe</title>
-    <link rel="stylesheet" href="winter_green_salad.css" type="text/css">
+    <link rel="stylesheet" type="text/css" href="winter_green_salad.css">
 </head>
 
 <body>
     <h1>Winter Green Salad Recipe</h1>
-    <img src="img/image.jpg" height="400px" width="auto">
-
+    <div class="row">
+        <div class="column right">
+            <img src="img/image.jpg">
+        </div>
+        <div class="column left">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus unde hic, minima explicabo iure
+                voluptates debitis eius provident praesentium! Quam dolorum minus, architecto quidem sint rerum impedit
+                perspiciatis officia adipisci.</p>
+        </div>
+    </div>
 </body>
 
 </html>
