edited the winter_green_salad files

--- a/winter_green_salad.html
+++ b/winter_green_salad.html
@@ -11,14 +11,55 @@
 
 <body>
     <h1>Winter Green Salad Recipe</h1>
+    <figure>People tend to forget to eat salads and other raw foods in the cold weather. <br>This salad is a good way to get
+        your
+        greens by combining somewhat heartier salad textures. I find that this salad is filling enough to be a main
+        course, with a bit of bread or some rice cakes on the side. <br>It will also work as an appetizer in a smaller
+        serving. </figure>
     <div class="row">
         <div class="column right">
-            <img src="img/image.jpg">
+            <img src="./img/image.jpg">
         </div>
         <div class="column left">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus unde hic, minima explicabo iure
-                voluptates debitis eius provident praesentium! Quam dolorum minus, architecto quidem sint rerum impedit
-                perspiciatis officia adipisci.</p>
+            <figure class="figure-text">
+                <p><b>Prep Time:</b>
+                    <span>30 Min</span>
+                </p>
+                <p><b>Servings:</b>
+                    <span>4</span>
+                </p>
+                <p><b>Yield:</b><span>4</span></p>
+            </figure>
+            <div class="ingredients">
+                <h2><b>Ingredients</b></h2>
+                <form class="salad">
+                    <h3><b>Salad:</b></h3><br>
+                    <input type="checkbox" name="leaves" id="leaves">
+                    <table>4 collard leaves, trimmed and finely chopped </table>
+                    <input type="checkbox" name="kale" id="kale">
+                    <table>⅓ bunch kale, trimmed and chopped </table>
+                    <input type="checkbox" name="lettuce" id="lettuce">
+                    <table>1 head romaine lettuce, chopped </table>
+                    <input type="checkbox" name="cabbage" id="cabbage">
+                    <table>¼ small head red cabbage, chopped </table>
+                    <input type="checkbox" name="pear" id="pear">
+                    <table>1 Bosc pear, cubed </table>
+                    <input type="checkbox" name="onion" id="onion">
+                    <table>½ Bermuda onion, finely diced </table>
+                    <input type="checkbox" name="pepper" id="pepper">
+                    <table>½ orange bell pepper, diced </table>
+                    <input type="checkbox" name="avocado" id="avocado">
+                    <table>½ Florida avocado - peeled, pitted, and diced </table>
+                    <input type="checkbox" name="carrot" id="carrot">
+                    <table>½ carrot, grated </table>
+                    <input type="checkbox" name="tomatoes" id="tomatoes">
+                    <table>5 cherry tomatoes, halved </table>
+                    <input type="checkbox" name="walnut" id="walnut">
+                    <table>7 walnut halves, crushed </table>
+                    <input type="checkbox" name="raisins" id="raisins">
+                    <table>2 tablespoons raisins, or to taste </table>
+                </form>
+            </div>
         </div>
     </div>
 </body>
