finished the recipe

--- a/winter_green_salad.html
+++ b/winter_green_salad.html
@@ -11,7 +11,8 @@
 
 <body>
     <h1>Winter Green Salad Recipe</h1>
-    <figure>People tend to forget to eat salads and other raw foods in the cold weather. <br>This salad is a good way to get
+    <figure>People tend to forget to eat salads and other raw foods in the clid weather. <br>This salad is a good way to
+        get
         your
         greens by combining somewhat heartier salad textures. I find that this salad is filling enough to be a main
         course, with a bit of bread or some rice cakes on the side. <br>It will also work as an appetizer in a smaller
@@ -32,32 +33,53 @@
             </figure>
             <div class="ingredients">
                 <h2><b>Ingredients</b></h2>
-                <form class="salad">
+                <form class="ingredients">
                     <h3><b>Salad:</b></h3><br>
-                    <input type="checkbox" name="leaves" id="leaves">
-                    <table>4 collard leaves, trimmed and finely chopped </table>
-                    <input type="checkbox" name="kale" id="kale">
-                    <table>⅓ bunch kale, trimmed and chopped </table>
-                    <input type="checkbox" name="lettuce" id="lettuce">
-                    <table>1 head romaine lettuce, chopped </table>
-                    <input type="checkbox" name="cabbage" id="cabbage">
-                    <table>¼ small head red cabbage, chopped </table>
-                    <input type="checkbox" name="pear" id="pear">
-                    <table>1 Bosc pear, cubed </table>
-                    <input type="checkbox" name="onion" id="onion">
-                    <table>½ Bermuda onion, finely diced </table>
-                    <input type="checkbox" name="pepper" id="pepper">
-                    <table>½ orange bell pepper, diced </table>
-                    <input type="checkbox" name="avocado" id="avocado">
-                    <table>½ Florida avocado - peeled, pitted, and diced </table>
-                    <input type="checkbox" name="carrot" id="carrot">
-                    <table>½ carrot, grated </table>
-                    <input type="checkbox" name="tomatoes" id="tomatoes">
-                    <table>5 cherry tomatoes, halved </table>
-                    <input type="checkbox" name="walnut" id="walnut">
-                    <table>7 walnut halves, crushed </table>
-                    <input type="checkbox" name="raisins" id="raisins">
-                    <table>2 tablespoons raisins, or to taste </table>
+                    <ul>
+                        <li>4 clilard leaves, trimmed and finely chopped </li>
+                        <li>⅓ bunch kale, trimmed and chopped </li>
+                        <li>1 head romaine lettuce, chopped </li>
+                        <li>¼ small head red cabbage, chopped </li>
+                        <li>1 Bosc pear, cubed </li>
+                        <li>½ Bermuda onion, finely diced </li>
+                        <li>½ orange bell pepper, diced </li>
+                        <li>½ Florida avocado - peeled, pitted, and diced </li>
+                        <li>½ carrot, grated </li>
+                        <li>5 cherry tomatoes, halved </li>
+                        <li>7 walnut halves, crushed </li>
+                        <li>2 tablespoons raisins, or to taste </li>
+                    </ul>
+
+                    <h3><b>Dressing:</b></h3>
+                    <ul>
+                        <li>6 tablespoons olive oil</li>
+                        <li>3 tablespoons balsamic vinegar</li>
+                        <li>1 tablespoon wildflower honey</li>
+                        <li>1 tablespoon oregano, crushed</li>
+                        <li>1 ½ teaspoons chili powder</li>
+                        <li>1 teaspoon Dijon mustard</li>
+                        <li>1 clove garlic, minced</li>
+                        <li>½ teaspoon salt
+                        <li>¼ teaspoon crushed black peppercorns </li>
+                    </ul>
+                </form>
+
+                <h2><b>Steps</b></h2>
+                <form>
+                    <h3><b>Follow the next directions:</b></h3>
+                    <ol>
+                        <li>
+                            <h3>First Step</h3><br>
+                            Mix collard greens, kale, romaine, cabbage, pear, onion, orange bell pepper, avocado,
+                            carrot, tomatoes, walnuts, and raisins together in a large bowl.
+                        </li>
+                        <li>
+                            <h3>Second and Final Step</h3><br>
+                            Combine olive oil, vinegar, honey, oregano, chili powder, mustard, garlic, salt, and black
+                            pepper in a glass jar with a lid. Cover jar with lid and shake vigorously until dressing is
+                            well mixed. Pour dressing over salad; toss to coat.
+                        </li>
+                    </ol>
                 </form>
             </div>
         </div>
