made the css more efficient and added a new recipe

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,11 @@
     <title>Index of recipes</title>
     <link href="index.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
     <h1>This is just an index for the recipes</h1>
     <a href="winter_green_salad.html">Winter Green Salad Recipe</a>
+    <a href="chicken_florentine.html">Chicken Florentine</a>
 </body>
+
 </html>
