forgot to save some changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>This is just an index for the recipes</h1>
-    <a href="winter_green_salad.html">Winter Green Salad Recipe</a>
+    <a href="winter_green_salad.html">Winter Green Salad Recipe</a> <br>
     <a href="chicken_florentine.html">Chicken Florentine</a>
 </body>
 
